# PicoWater

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  lwipopts.h
.github/workflows/: version-check.yml
html_files/: index.shtml
src/: alarms.c  alarms.h  cgi.c  cgi.h  core_entries.c  core_entries.h  definitions.h  helpers.c  helpers.h  initial_alarms.h  logger.c  logger.h  main.c  network_comms.c  network_comms.h  on_board_led.c  on_board_led.h  ssi.c  ssi.h  sys_info.c  sys_info.h  usb_comms.c  usb_comms.h
